2009-03-11  Ori Avtalion  <ori@avtalion.name>

	* src/core/window-props.c: fix problem where the previous
        code ignored callbacks for properties whose values weren't
        looked up.  Closes #572573.

2009-03-06  Thomas Thurman  <tthurman@gnome.org>

	* configure.in: add optional dependency on gtop.
	* src/core/window-props.c: Include "(as username)"
          in the titlebar if a window is running as another user.
	* src/core/window.c: check for PID before name, since
          the rendering of the name can now depend on the PID.

        Closes #549389.

2009-02-21  Matthias Clasen  <mclasen@redhat.com>

	* src/core/bell.c: Don't force CA_PROP_CANBERRA_ENABLE to 1.
	That was a misunderstanding on my part, and makes it impossible
	to get rid of the bell.

2009-02-11  Thomas Thurman  <tthurman@gnome.org>

	Use zenity for the session management dialogue that warns about
	clueless clients, not metacity-dialog.  This is the last change
	away from metacity-dialog and therefore closes #521914.

	* src/Makefile.am:
	* src/core/session.c:
	* src/core/util.c:
	* src/include/util.h:
	* src/ui/metacity-dialog.c (deleted):

2009-02-12  Matthias Clasen  <mclasen@redhat.com>

	* src/core/bell.c (meta_bell_set_audible): Now that we are
	using libcanberra, don't tell the X server to play the system
	bell internally.

2009-02-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 557921 – [PATCH] Sound event support to metacity

	Patch by Lennart Poettering

	* configure.in: Require libcanberra-gtk

	* src/core/bell.c (meta_bell_notify): Play the alert sound from
	the sound theme instead of the dreaded system bell.

	* src/core/workspace.c (meta_workspace_activate_with_focus): Play
	a sound on workspace switch.

2009-02-11  Thomas Thurman  <tthurman@gnome.org>

        Session must be saved before display close, and display
        shouldn't close during shutdown if it's already closed.
        Can't believe we don't have a bug about this already...
